--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -977,6 +977,21 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            th.item-case-width {
+              width: 100px;
+            }
+
+            th.item-controls {
+              width: 70px;
+            }
+
+            .item-case {
+              float: left;
+              width: 20px;
+              height: 20px;
+            }
+
           }
 
           .atouts-2 {
@@ -987,6 +1002,21 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            th.item-case-width {
+              width: 70px;
+            }
+
+            th.item-controls {
+              width: 100px;
+            }
+
+            .item-case {
+              float: left;
+              width: 20px;
+              height: 20px;
+            }
+
           }
 
         }
