ajout items pouvoirs

--- a/penombre.css
+++ b/penombre.css
@@ -701,6 +701,27 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-radius: 4px;
   padding: 2px;
 }
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs .item-coche,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs .item-coche {
+  width: 55px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs .item-case,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs .item-case {
+  width: 20px;
+  height: 20px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs td,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs td {
+  font-family: "ChocoCovRainBold";
+  font-size: 25px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs th.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs th.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs td.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs td.item-controls {
+  width: 70px;
+  font-size: 17px;
+}
 .penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2,
 .penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 {
   margin-left: 100px;
@@ -709,6 +730,27 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border: 1px solid #917f35;
   border-radius: 4px;
   padding: 2px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2 .item-coche,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 .item-coche {
+  width: 55px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2 .item-case,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 .item-case {
+  width: 20px;
+  height: 20px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2 td,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 td {
+  font-family: "ChocoCovRainBold";
+  font-size: 25px;
+}
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2 th.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 th.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs-2 td.item-controls,
+.penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs-2 td.item-controls {
+  width: 70px;
+  font-size: 17px;
 }
 .penombre.eminence .eminence-content .eminence-pouvoirs .content .pouvoirs .ligne-pouvoir,
 .penombre.eminence .eminence-content .eminence-pouvoirs-2 .content .pouvoirs .ligne-pouvoir,
@@ -796,13 +838,23 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-radius: 4px;
   padding: 2px;
 }
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts td,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts td {
+  font-family: "ChocoCovRainBold";
+  font-size: 25px;
+}
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts th.item-case-width,
-.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts th.item-case-width {
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts th.item-case-width,
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts td.item-case-width,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts td.item-case-width {
   width: 100px;
 }
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts th.item-controls,
-.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts th.item-controls {
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts th.item-controls,
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts td.item-controls,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts td.item-controls {
   width: 70px;
+  font-size: 17px;
 }
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts .item-case,
 .penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts .item-case {
@@ -819,13 +871,23 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   border-radius: 4px;
   padding: 2px;
 }
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 td,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 td {
+  font-family: "ChocoCovRainBold";
+  font-size: 25px;
+}
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 th.item-case-width,
-.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 th.item-case-width {
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 th.item-case-width,
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 td.item-case-width,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 td.item-case-width {
   width: 70px;
 }
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 th.item-controls,
-.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 th.item-controls {
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 th.item-controls,
+.penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 td.item-controls,
+.penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 td.item-controls {
   width: 100px;
+  font-size: 17px;
 }
 .penombre.eminence .eminence-content .eminence-atouts .content .atouts-2 .item-case,
 .penombre.eminence .eminence-content .eminence-atouts-2 .content .atouts-2 .item-case {
