--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -867,6 +867,27 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            .item-coche {
+              width: 55px;
+            }
+
+            .item-case {
+              width: 20px;
+              height: 20px;
+            }
+
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.item-controls,
+            td.item-controls {
+              width: 70px;
+              font-size: @font-size-base;
+            }
+
           }
 
           .pouvoirs-2 {
@@ -877,6 +898,27 @@ body {
             border: 1px solid #917f35;
             border-radius: @border-radius-small;
             padding: 2px;
+
+            .item-coche {
+              width: 55px;
+            }
+
+            .item-case {
+              width: 20px;
+              height: 20px;
+            }
+
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.item-controls,
+            td.item-controls {
+              width: 70px;
+              font-size: @font-size-base;
+            }
+
           }
 
           .pouvoirs,
@@ -978,12 +1020,20 @@ body {
             border-radius: @border-radius-small;
             padding: 2px;
 
-            th.item-case-width {
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.item-case-width,
+            td.item-case-width {
               width: 100px;
             }
 
-            th.item-controls {
+            th.item-controls,
+            td.item-controls {
               width: 70px;
+              font-size: @font-size-base;
             }
 
             .item-case {
@@ -1003,12 +1053,20 @@ body {
             border-radius: @border-radius-small;
             padding: 2px;
 
-            th.item-case-width {
+            td {
+              font-family: @font-chocolate;
+              font-size: @font-size-midlarge;
+            }
+
+            th.item-case-width,
+            td.item-case-width {
               width: 70px;
             }
 
-            th.item-controls {
+            th.item-controls,
+            td.item-controls {
               width: 100px;
+              font-size: @font-size-base;
             }
 
             .item-case {
