--- a/templates/eminence/partials/atouts.hbs
+++ b/templates/eminence/partials/atouts.hbs
@@ -26,7 +26,9 @@
 
                     </th>
                     <th class="item-controls">
+                    {{#if unlocked}}
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutCreate' }}" data-action="create" data-type="atout"><i class="fas fa-plus"></i></a>
+                    {{/if}}
                     </th>
                 </tr>
                 {{#each atouts as |item id|}}
@@ -40,8 +42,10 @@
                     {{/times}}
                     </td>
                     <td class="item-controls">
+                    {{#if ../unlocked}}
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.atoutDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    {{/if}}
                     </td>
                 </tr>
                 {{/each}}
