--- a/templates/eminence/partials/pouvoirs.hbs
+++ b/templates/eminence/partials/pouvoirs.hbs
@@ -29,7 +29,9 @@
                         {{ localize 'PENOMBRE.ui.pouvoirType' }}
                     </th>
                     <th class="item-controls">
+                    {{#if unlocked}}
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirCreate' }}" data-action="create" data-type="pouvoir"><i class="fas fa-plus"></i></a>
+                    {{/if}}
                     </th>
                 </tr>
                 {{#each pouvoirs as |item id|}}
@@ -42,24 +44,26 @@
                     </td>
                     <td>
                     {{#if (eq item.system.type 'naissance')}}
-                        <span class="item-type">{{ localize  'PENOMBRE.Pouvoir.type.naissance.label' }}</span>
+                        <span class="item-type">{{ localize 'PENOMBRE.Pouvoir.type.naissance.label' }}</span>
                     {{/if}}
                     {{#if (eq item.system.type 'peuple')}}
-                        <span class="item-type">{{ localize  'PENOMBRE.Pouvoir.type.peuple.label' }}</span>
+                        <span class="item-type">{{ localize 'PENOMBRE.Pouvoir.type.peuple.label' }}</span>
                     {{/if}}
                     {{#if (eq item.system.type 'cle')}}
-                        <span class="item-type">{{ localize  'PENOMBRE.Pouvoir.type.cle.label' }}</span>
+                        <span class="item-type">{{ localize 'PENOMBRE.Pouvoir.type.cle.label' }}</span>
                     {{/if}}
                     {{#if (eq item.system.type 'gamme')}}
-                        <span class="item-type">{{ localize  'PENOMBRE.Pouvoir.type.gamme.label' }}</span>
+                        <span class="item-type">{{ localize 'PENOMBRE.Pouvoir.type.gamme.label' }}</span>
                     {{/if}}
                     {{#if (eq item.system.type 'ton')}}
-                        <span class="item-type">{{ localize  'PENOMBRE.Pouvoir.type.ton.label' }}</span>
+                        <span class="item-type">{{ localize 'PENOMBRE.Pouvoir.type.ton.label' }}</span>
                     {{/if}}
                     </td>
                     <td class="item-controls">
+                    {{#if ../unlocked}}
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirEdit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
                         <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.pouvoirDelete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    {{/if}}
                     </td>
                 </tr>
                 {{/each}}
