Ajout autre CSS Items

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -370,6 +370,14 @@ body {
 --------------------------------------------- */
 .pouvoir {
   .pouvoir-content {
+    .pouvoir-main {
+      text-align: center;
+      h2 {
+        font-family: @font-cattedrale;
+        color: @color-primary;
+      }
+    }
+
     .datas {
       h3 {
         font-family: @font-cattedrale;
@@ -398,6 +406,14 @@ body {
 
 .atout {
   .atout-content {
+     .atout-main {
+      text-align: center;
+      h2 {
+        font-family: @font-cattedrale;
+        color: @color-primary;
+      }
+    }
+    
     .datas {
       h3 {
         font-family: @font-cattedrale;
