--- a/templates/pouvoir-main.hbs
+++ b/templates/pouvoir-main.hbs
@@ -1,4 +1,4 @@
 {{log "pouvoir" this}}
 <section class="pouvoir-main standard-form">
-
+    <h2>{{ localize 'PENOMBRE.ui.pouvoir' }}</h2>
 </section>
