--- a/penombre.css
+++ b/penombre.css
@@ -279,6 +279,13 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 /* ---------------------------------------------
         Items
 --------------------------------------------- */
+.pouvoir .pouvoir-content .pouvoir-main {
+  text-align: center;
+}
+.pouvoir .pouvoir-content .pouvoir-main h2 {
+  font-family: "CattedraleDemo";
+  color: #a56135;
+}
 .pouvoir .pouvoir-content .datas h3 {
   font-family: "CattedraleDemo";
   color: #56605b;
@@ -292,6 +299,13 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 }
 .pouvoir .pouvoir-content .descriptions .descriptions-entry {
   width: 100%;
+}
+.atout .atout-content .atout-main {
+  text-align: center;
+}
+.atout .atout-content .atout-main h2 {
+  font-family: "CattedraleDemo";
+  color: #a56135;
 }
 .atout .atout-content .datas h3 {
   font-family: "CattedraleDemo";
