--- a/templates/pouvoir-main.hbs
+++ b/templates/pouvoir-main.hbs
@@ -1,4 +1,7 @@
 {{log "pouvoir" this}}
 <section class="pouvoir-main standard-form">
-    <h2>{{ localize 'PENOMBRE.ui.pouvoir' }}</h2>
+    {{formGroup fields.name value=item.name localize=true}}
+    {{formGroup systemFields.utilise value=systemSource.utilise localize=true}}
+    {{formGroup systemFields.type value=systemSource.type localize=true}}
+    {{editor descriptionHTML target="system.description" button=true editable=editable engine="prosemirror"}}
 </section>
