--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -369,7 +369,13 @@ body {
         Items
 --------------------------------------------- */
 .pouvoir {
-  .pouvoir-content {
+  .pouvoir-content .standard-form .details {
+      display: flex;
+      justify-content: space-between;
+
+      select[name="system.type"] {
+        width: 100px;
+      }
   }
 }
 
